# flask_course

./: .env  Makefile  pyproject.toml
assets/: auth.json  books.json  cars_db.json  cars_ids_db.json  db.json
flask_course/: example.py  example2.py  example3.py  lesson_12.py  lesson_13.py  lesson_14.py  lesson_14work.py  lesson_15.py  lesson_15work.py  lesson_16.py  lesson_16work.py  lesson_17work.py  lesson_19work.py  lesson_20work.py  lesson_21.py  lesson_23.py  lesson_6a.py  lesson_6b.py  lesson_6work.py  lesson_7a.py  lesson_7b.py  lesson_7work.py  lesson_8a.py  lesson_8b.py  lesson_8work.py  lesson_9a.py  lesson_9work.py  library.py  script.py  server_les_4.py
flask_course/static/styles/: main.css
flask_course/templates/: courses.html  index.html  layout.html
flask_course/templates/cars/: cars_list.html  index.html  layout2.html  new_car.html  one_car.html
flask_course/templates/cart/: index.html
flask_course/templates/courses/: index.html  new.html  view.html  view_list.html
flask_course/templates/posts/: !с_кнопками!_index.html  index.html  show.html
flask_course/templates/posts2/: new.html
flask_course/templates/posts3/: index.html  index_root.html  new.html
flask_course/templates/posts4/: edit.html  form.html  index.html
flask_course/templates/users/: index.html  index2.html  new.html  show_user.html  user_list.html  users_list.html
tests/: test_lesson_9.py
